[gd_scene load_steps=6 format=3 uid="uid://u5cer8r8dtys"]

[ext_resource type="Script" uid="uid://d016d7t30punw" path="res://src/scenes/game/map.gd" id="1_vq7y3"]
[ext_resource type="Theme" uid="uid://okeq2d56howe" path="res://theme/common.tres" id="2_wvkvs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5kwkg"]
bg_color = Color(0.47451, 0.486275, 0.486275, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hjwdf"]
bg_color = Color(0.466667, 0.466667, 0.466667, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_34gjn"]
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Map" type="Node2D"]
script = ExtResource("1_vq7y3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
offset_left = 10.0
offset_top = 100.0
offset_right = 640.0
offset_bottom = 775.0

[node name="GameZone" type="Panel" parent="CanvasLayer"]
offset_left = 15.0
offset_top = 150.0
offset_right = 635.0
offset_bottom = 770.0
theme_override_styles/panel = SubResource("StyleBoxFlat_5kwkg")

[node name="Portals" type="Control" parent="CanvasLayer/GameZone"]
layout_mode = 3
anchors_preset = 0

[node name="Npc" type="Control" parent="CanvasLayer/GameZone"]
layout_mode = 3
anchors_preset = 0

[node name="Monsters" type="Control" parent="CanvasLayer/GameZone"]
layout_mode = 3
anchors_preset = 0
offset_left = 32.0
offset_top = 37.0
offset_right = 582.0
offset_bottom = 587.0
mouse_filter = 2

[node name="Players" type="Control" parent="CanvasLayer/GameZone"]
layout_mode = 3
anchors_preset = 0
offset_left = 32.0
offset_top = 37.0
offset_right = 582.0
offset_bottom = 587.0
mouse_filter = 2

[node name="Effects" type="Control" parent="CanvasLayer/GameZone"]
layout_mode = 3
anchors_preset = 0
offset_left = 32.0
offset_top = 37.0
offset_right = 582.0
offset_bottom = 587.0
mouse_filter = 2

[node name="DropThingControl" type="Control" parent="CanvasLayer/GameZone"]
layout_mode = 3
anchors_preset = 0
offset_left = -14.0
offset_top = -125.0
offset_right = -14.0
offset_bottom = -125.0

[node name="Name" type="Label" parent="CanvasLayer"]
custom_minimum_size = Vector2(300, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 100.0
offset_right = 150.0
offset_bottom = 142.0
grow_horizontal = 2
theme = ExtResource("2_wvkvs")
text = "彩虹岛"
horizontal_alignment = 1

[node name="MapDropBt" type="Button" parent="CanvasLayer"]
offset_left = 575.0
offset_top = 106.0
offset_right = 635.0
offset_bottom = 145.0
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 25
theme_override_styles/pressed = SubResource("StyleBoxFlat_hjwdf")
theme_override_styles/normal = SubResource("StyleBoxFlat_34gjn")
text = "掉落"

[node name="RefreshTime" type="Panel" parent="CanvasLayer"]
visible = false
offset_left = 386.0
offset_top = 155.0
offset_right = 506.0
offset_bottom = 215.0

[node name="Label" type="Label" parent="CanvasLayer/RefreshTime"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_top = 5.0
offset_right = 48.0
offset_bottom = 28.0
grow_horizontal = 2
text = "刷新剩余时间"

[node name="RestTime" type="Label" parent="CanvasLayer/RefreshTime"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_top = 30.0
offset_right = 48.0
offset_bottom = 53.0
grow_horizontal = 2
text = "1秒"
horizontal_alignment = 1

[node name="BossStatus" type="Panel" parent="CanvasLayer"]
visible = false
offset_left = 510.0
offset_top = 155.0
offset_right = 630.0
offset_bottom = 262.0

[node name="Label" type="Label" parent="CanvasLayer/BossStatus"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_top = 5.0
offset_right = 48.0
offset_bottom = 28.0
grow_horizontal = 2
text = "最速击杀记录"

[node name="RecordTime" type="Label" parent="CanvasLayer/BossStatus"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_top = 30.0
offset_right = 28.0
offset_bottom = 53.0
grow_horizontal = 2
text = "-"

[node name="Label" type="Label" parent="CanvasLayer/BossStatus/RecordTime"]
layout_mode = 0
offset_left = 80.0
offset_right = 96.0
offset_bottom = 23.0
text = "秒"

[node name="Label2" type="Label" parent="CanvasLayer/BossStatus"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_top = 55.0
offset_right = 48.0
offset_bottom = 78.0
grow_horizontal = 2
text = "击杀时间统计"

[node name="CostTime" type="Label" parent="CanvasLayer/BossStatus"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_top = 80.0
offset_right = 28.0
offset_bottom = 103.0
grow_horizontal = 2
text = "-"

[node name="Label" type="Label" parent="CanvasLayer/BossStatus/CostTime"]
layout_mode = 0
offset_left = 80.0
offset_right = 96.0
offset_bottom = 23.0
text = "秒"

[node name="MonsterRefreshTimer" type="Timer" parent="."]

[node name="CloseMonsRefreshTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="pressed" from="CanvasLayer/MapDropBt" to="." method="_on_map_drop_bt_pressed"]
[connection signal="timeout" from="MonsterRefreshTimer" to="." method="_on_monster_refresh_timer_timeout"]
[connection signal="timeout" from="CloseMonsRefreshTimer" to="." method="_on_close_mons_refresh_timer_timeout"]
